syntax = "proto2";

package hercules.proto;

enum ParameterType {
    PARAMETER_STRING = 0;
    PARAMETER_INT = 1;
    PARAMETER_BOOL = 2;
    PARAMETER_BYTES = 3;
}