
/****************************************************************
 * Copyright (c) 2022, liyinbin
 * All rights reserved.
 * Author by liyinbin (jeff.li) lijippy@163.com
 *****************************************************************/

#ifndef HERCULES_CORE_PARAMETER_TYPE_H_
#define HERCULES_CORE_PARAMETER_TYPE_H_

#include "hercules/core/parameter_type.h"

namespace hercule::core {

    std::string_view to_string_view();
}  // namespace hercule::core

#endif  // HERCULES_CORE_PARAMETER_TYPE_H_
